--- a/requirements.txt
+++ b/requirements.txt
@@ -1,168 +1,69 @@
 absl-py==2.1.0
-addict==2.4.0
-aiofiles==23.2.1
-aliyun-python-sdk-core==2.15.0
-aliyun-python-sdk-kms==2.16.2
-altair==5.2.0
-annotated-types==0.6.0
-anyio==4.3.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-attrs==23.2.0
-blis==0.7.11
-catalogue==2.0.10
-certifi==2024.2.2
-cffi==1.16.0
+bleach==6.1.0
+certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
-clip @ git+https://github.com/openai/CLIP.git@a1d071733d7111c9c014f024669f959182114e33
-cloudpathlib==0.18.1
-cloudpickle==3.0.0
-coloredlogs==15.0.1
-confection==0.1.5
-contourpy==1.2.0
-crcmod==1.7
-cryptography==42.0.5
+clip==1.0
+contourpy==1.2.1
 cycler==0.12.1
-cymem==2.0.8
-defusedxml==0.7.1
 docker-pycreds==0.4.0
-einops==0.7.0
-fastapi==0.110.0
-ffmpy==0.3.2
-filelock==3.9.0
-filterpy==1.4.5
-flatbuffers==24.3.25
-fonttools==4.49.0
+einops==0.8.0
+filelock==3.13.1
+fonttools==4.53.1
 fsspec==2024.2.0
 ftfy==6.2.0
 gitdb==4.0.11
 GitPython==3.1.43
-gradio==4.20.1
-gradio_client==0.11.0
-grpcio==1.62.0
-h11==0.14.0
-httpcore==1.0.4
-httpx==0.27.0
-huggingface-hub==0.21.4
-humanfriendly==10.0
-idna==3.6
-importlib_metadata==7.0.2
-importlib_resources==6.1.3
-ipdb==0.13.13
-Jinja2==3.1.2
-jmespath==0.10.0
-joblib==1.4.2
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
+grpcio==1.64.1
+idna==3.7
+Jinja2==3.1.3
+kaggle==1.6.14
 kiwisolver==1.4.5
-langcodes==3.4.0
-language_data==1.2.0
-loguru==0.7.2
-marisa-trie==1.2.0
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.3
-mdurl==0.1.2
-mmcv==2.1.0
-mmcv-lite==2.0.1
-mmdet==3.3.0
-mmengine==0.10.3
-model-index==0.1.11
-motmetrics==1.4.0
+Markdown==3.6
+MarkupSafe==2.1.5
+matplotlib==3.9.1
 mpmath==1.3.0
-murmurhash==1.0.10
 networkx==3.2.1
 numpy==1.26.3
-onnx==1.16.1
-onnxruntime==1.18.0
-opencv-contrib-python==4.9.0.80
-opencv-python==4.9.0.80
-opencv-python-headless==4.9.0.80
-opendatalab==0.0.10
-openmim==0.3.9
-openxlab==0.0.34
-ordered-set==4.1.0
-orjson==3.9.15
-oss2==2.17.0
-packaging==23.2
-pandas==2.2.1
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cudnn-cu11==8.7.0.84
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.3.0.86
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-nccl-cu11==2.20.5
+nvidia-nvtx-cu11==11.8.86
+opencv-python==4.10.0.84
+packaging==24.1
 pillow==10.2.0
-platformdirs==4.2.0
-preshed==3.0.9
-prettytable==3.10.0
+platformdirs==4.2.2
 protobuf==4.25.3
-pycocotools==2.0.7
-pycparser==2.21
-pycryptodome==3.20.0
-pydantic==2.6.3
-pydantic_core==2.16.3
-pydub==0.25.1
-Pygments==2.17.2
-pyparsing==3.1.1
-pyreadline3==3.4.1
-python-dateutil==2.8.2
-python-multipart==0.0.9
-pytz==2023.4
-pywin32==305.1
+psutil==6.0.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
 PyYAML==6.0.1
-referencing==0.33.0
-regex==2023.12.25
-requests==2.28.2
-rich==13.4.2
-rpds-py==0.18.0
-ruff==0.3.1
-safetensors==0.4.2
-scikit-learn==1.4.2
-scipy==1.12.0
-seaborn==0.13.2
-semantic-version==2.10.0
-sentry-sdk==2.5.1
+regex==2024.5.15
+requests==2.32.3
+sentry-sdk==2.8.0
 setproctitle==1.3.3
-shapely==2.0.3
-shellingham==1.5.4
-smart-open==7.0.4
+six==1.16.0
 smmap==5.0.1
-sniffio==1.3.1
-spacy==3.7.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-starlette==0.36.3
-submitit==1.5.1
-supervision==0.18.0
 sympy==1.12
-tabulate==0.9.0
-tdqm==0.0.1
-tensorboard==2.16.2
+tensorboard==2.17.0
 tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
-termcolor==2.4.0
-terminaltables==3.1.10
-thinc==8.2.4
-thop==0.1.1.post2209072238
-threadpoolctl==3.5.0
-timm==1.0.3
-tokenizers==0.15.2
-tomli==2.0.1
-tomlkit==0.12.0
-toolz==0.12.1
-torch==2.2.1+cu121
-torchaudio==2.2.1+cu121
-torchtext==0.17.2
-torchvision==0.17.1+cu121
-tqdm==4.65.2
-transformers==4.38.2
-typer==0.9.0
-tzdata==2024.1
-urllib3==1.26.18
-uvicorn==0.27.1
-wandb==0.17.2
-wasabi==1.1.3
-weasel==0.4.1
-websockets==11.0.3
-Werkzeug==3.0.1
-win32-setctime==1.1.0
-wrapt==1.16.0
-xmltodict==0.13.0
-yapf==0.40.2
+text-unidecode==1.3
+torch==2.3.1+cu118
+torchaudio==2.3.1+cu118
+torchvision==0.18.1+cu118
+tqdm==4.66.4
+triton==2.3.1
+typing_extensions==4.9.0
+urllib3==2.2.2
+wandb==0.17.4
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.0.3
